--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@ ignores it.
   <area shape="rect" coords="290,172,333,250" alt="Phone" href="phone.htm">
   <area shape="circle" coords="337,300,44" alt="Coffee" href="coffee.htm">
 </map>
-
+<p>TABEL NILAI KELAS XI TJKT 1.</p><table style="width:100%">  <tr>    <th rowspan="2">No</th>    <th rowspan="2">NAMA</th>    <th rowspan="2">KELAS</th>    <th colspan="3">NILAI ADIPTIF</th>     <th colspan="3">NILAI PRODUKTIF</th  </tr>  <tr>    <td>PKN</td>    <td>MATE</td>    <td>HTML</td>     <td>CSS</td>    <td>JS</td>          </tr>  <tr>    <td>1</td>    <td>Jake</td>    <td>XI TJKT 1</td>    <td>100</td>    <td>99</td>    <td>90</td>    <td>87</td>    <td>76</td>    </tr>  <tr>    <td>2</td>    <td>Ken</td>    <td>XI TJKT 1</td>    <td>80</td>    <td>95</td>    <td>70</td>    <td>79</td>    <td>88</td>          </tr>  <tr>    <td>3</td>    <td>Aeri</td>    <td>XI TJKT 1</td>    <td>56</td>    <td>77</td>    <td>89</td>    <td>90</td>    <td>87</td>          </tr>  <tr>    <td>4</td>    <td>Winter</td>    <td>XI TJKT 1</td>    <td>66</td>    <td>69</td>    <td>89</td>    <td>67</td>    <td>93</td>  </tr></table>
+ 
+ 
 </body>
 </html>
+
